--- a/CalculatorUI/CalculatorUI.csproj
+++ b/CalculatorUI/CalculatorUI.csproj
@@ -57,6 +57,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="credits.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="credits.Designer.cs">
+      <DependentUpon>credits.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HistoryLogViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HistoryLogViewForm.Designer.cs">
+      <DependentUpon>HistoryLogViewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +83,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultPolynomialTermControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ResultPolynomialTermControl.Designer.cs">
+      <DependentUpon>ResultPolynomialTermControl.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="credits.resx">
+      <DependentUpon>credits.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HistoryLogViewForm.resx">
+      <DependentUpon>HistoryLogViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,6 +110,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ResultPolynomialTermControl.resx">
+      <DependentUpon>ResultPolynomialTermControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -98,6 +125,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="appdata.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
