--- a/CalculatorUI/CalculatorUI.csproj
+++ b/CalculatorUI/CalculatorUI.csproj
@@ -82,6 +82,12 @@
     <Compile Include="HistoryLogViewForm.Designer.cs">
       <DependentUpon>HistoryLogViewForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="LicenseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LicenseForm.Designer.cs">
+      <DependentUpon>LicenseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HistoryLogViewForm.resx">
       <DependentUpon>HistoryLogViewForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LicenseForm.resx">
+      <DependentUpon>LicenseForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
