Added ask on exit / fixed multiple exit prompt

--- a/CalculatorUI/App.config
+++ b/CalculatorUI/App.config
@@ -16,6 +16,9 @@
             <setting name="Color" serializeAs="String">
                 <value>Black</value>
             </setting>
+            <setting name="AskOnExit" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CalculatorUI.Properties.Settings>
     </userSettings>
 </configuration>
