--- a/CalculatorUI/Properties/Settings.settings
+++ b/CalculatorUI/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="Color" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Black</Value>
     </Setting>
+    <Setting Name="AskOnExit" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
