Tests * removed TestApp project * Added PolynomialEquation.Properties.Setting.Precision (default 2) * made NegativeRankException public (For tests) * Added unit tests (not complete) * bug fixes:     * reverted ParsePolynomial / PolynomialParse     * reverted no roots exception * Notes:     * when polynomial precision is set to N all values less than 10 power negative N is equal to zero, for example: when precision equal 2 and we multiplied 0.5 times 0.5X the result is 0.02X not 0.025X

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-/CalculatorUI/bin
 obj
 .vs
 /Polynomial Calculator.v12.suo
-/TestApp/obj
-/TestApp/bin
-/PolynomialTree/obj
-/PolynomialTree/bin
 bin
+/TestApp
