--- a/CalculatorUI/App.config
+++ b/CalculatorUI/App.config
@@ -19,6 +19,21 @@
             <setting name="AskOnExit" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Polynomial1Color" serializeAs="String">
+                <value>Orange</value>
+            </setting>
+            <setting name="Polynomial2Color" serializeAs="String">
+                <value>Red</value>
+            </setting>
+            <setting name="ResultPolyColor" serializeAs="String">
+                <value>Blue</value>
+            </setting>
+            <setting name="MinValue" serializeAs="String">
+                <value>-20</value>
+            </setting>
+            <setting name="MaxValue" serializeAs="String">
+                <value>20</value>
+            </setting>
         </CalculatorUI.Properties.Settings>
     </userSettings>
 </configuration>
