SaveAs / LoadFrom / Compression * Added saveManger for Trie. * Add loadFromFile and saveAs (closes #31). * Used XWRT to compress XML file (closes #30). * Added LoadThread. * Added open program from command line * Notes:     * LoadFromFile clears the log first, I'm thinking of merging the tries instead of clearing.     * .gitignore don't allow .exe files, you should include xwert32.exe 3.4.     * We're using static dicitionary compression. wrt-eng contains nearly all english words. We should include only words may exist in the XML file for better compression.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,32 @@
+# binary folders
 obj
-.vs
-/Polynomial Calculator.v12.suo
 bin
-/TestApp
+
+# Visual Studio Folders
+.vs
+
+# Object files
+*.o
+*.ko
+
+# Libraries
+*.lib
+*.a
+
+# Shared objects 
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# Visual Studio solution files
+*.suo
+*.user
+
+# I don't know
 CalculatorUI/Resources/Splash.png
