Save and load Dfs improvement / Term string constructor * Changed root finiding character to 'r' instead of '=' * Added Term string constructor * Improved dfs function and reducded redundancy in the code * Bug fixes:     * Returned OldGcd (maybe it was removed by mistake)     * SaveTrieManager was mistakenly name SaveTrieManagaer     * Removed appdata.xml

--- a/PolynomialTree/PolynomialTree.csproj
+++ b/PolynomialTree/PolynomialTree.csproj
@@ -45,7 +45,8 @@
     <Compile Include="GenericTrie.cs" />
     <Compile Include="Trie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TrieSaveMangaer.cs" />
+    <Compile Include="TrieSaveManger.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
